# hallucination-aware-hybrid-llm

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  README_OLD.md  SESSION_SUMMARY.md  benchmark_results.json  docker-compose.yml  locustfile.py  pyproject.toml  requirements-core.txt  requirements.txt  retrieval_results.json
.github/workflows/: ci.yml
.venv311/: pyvenv.cfg
.venv311/Scripts/: activate  activate.bat
api/: app.py  config.py  dependencies.py  gpu_api.py  main.py  metrics.py  middleware.py  schemas.py
api/routers/: health.py  query.py
app/: Dockerfile  streamlit_app.py
data/eval/: qa_pairs.jsonl
data/rag_docs/: attention_is_all_you_need_summary.txt  doc_000.txt  doc_001.txt  doc_002.txt  doc_003.txt  doc_004.txt  doc_005.txt  doc_006.txt  doc_007.txt  doc_008.txt  doc_009.txt  doc_010.txt  doc_011.txt  doc_012.txt  doc_013.txt  doc_014.txt  doc_015.txt  doc_016.txt  doc_017.txt  (+21 more)
docs/: ARCHITECTURE.md
experiments/: ablation_guard_layers.py  phi3_lora_inference.ipynb
finetune/: README.md
inference/: run_lora_inference.py  run_phi2_local_inference.py
logs/: inference_logs.jsonl
rag/: base_pipeline.py  generator.py  hallucination_guard.py  ingest_docs.py  pipeline.py  rag_inference.py  rag_inference_lightweight.py  retriever.py  shared.py
scripts/: build_eval_dataset.py  evaluate_rag.py  evaluate_rag_retrieval.py  evaluate_retrieval.py  generate_production_docs.py  setup_production.sh
tests/: test_api.py  test_rag_pipeline.py
training/: 01_prepare_dataset.py  03_qlora_finetuning_phi3.ipynb
(+1 files in other folders)
