[tool.ruff]
target-version = "py312"
line-length = 100
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.isort]
known-first-party = ["api", "rag", "inference", "app", "scripts", "tests"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
exclude = ["tests/", "experiments/", "scripts/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=api --cov=rag --cov-report=term-missing --cov-fail-under=65"

[project.optional-dependencies]
eval = ["ragas>=0.1.14", "mlflow>=2.14.0", "datasets>=2.20.0"]
dev = ["ruff>=0.5.0", "mypy>=1.10.0", "pytest-cov>=5.0.0", "pre-commit>=3.7.0"]
